Spacing fix for tags

--- a/app/assets/app.scss
+++ b/app/assets/app.scss
@@ -172,7 +172,7 @@ a {
   }
 
   .tags li {
-    margin: 0 5px 0 0;
+    margin: 0 0 0 5px;
     display: inline-block;
     padding: 2px 5px;
     background: #EAEAEA;
